--- a/sdns/config.yml
+++ b/sdns/config.yml
@@ -135,7 +135,8 @@ qname_min_level = 5
 #	"10.in-addr.arpa."
 # ]
 emptyzones = []
-
+  
+cacertificatefile = "./testdata/certificate/CACert.pem"
 # You can add your own plugins to sdns. The plugin order is very important. 
 # Plugins can be load before cache middleware.
 # Config keys should be string and values can be anything.
