--- a/onlineProtocol/testdata/resolver/config.yml
+++ b/onlineProtocol/testdata/resolver/config.yml
@@ -137,6 +137,8 @@ qname_min_level = 5
 emptyzones = []
   
 cacertificatefile = "./certificates/CACert.pem"
+
+scion = false
 # You can add your own plugins to sdns. The plugin order is very important. 
 # Plugins can be load before cache middleware.
 # Config keys should be string and values can be anything.
