Data creation for benchmarking added

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,4 @@
 offlineAuth/cmd/aggregator/data/badger_database/
 offlineAuth/cmd/log/data/badger_database/
+offlineAuth/benchmark/temp/
+offlineAuth/build/
